# HA_Codex_Bridge

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  eslint.config.js  hacs.json  package-lock.json  package.json  pytest.ini  repository.yaml  requirements-test.txt
bridge_service/: pyproject.toml
bridge_service/src/codex_bridge_service/: __init__.py  __main__.py  account.py  api_contract.py  app.py  auth.py  auth_coordinator.py  auth_state.py  automations.py  browser_broker.py  browser_contract.py  browser_egress.py  browser_worker_client.py  build_info.py  capabilities.py  codex_app_server.py  codex_app_server_contract.json  codex_app_server_contract.py  codex_app_server_protocol.schema.json  codex_app_server_protocol.v2.schema.json  codex_auth.py  codex_process.py  diagnostics.py  event_store.py  feature_capabilities.py  generated_images.py  http_limits.py  limits.py  main.py  mcp_manager.py  model_catalog.py  models.py  readiness.py  resource_limits.py  runner.py  runtime_broker.py  runtime_gate.py  runtime_policy.py  runtime_state.py  sandbox_attestation.py  (+3 more)
bridge_service/src/codex_bridge_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridge_service/src/codex_bridge_service/routes/: __init__.py  (+16 more)
bridge_service/tests/: legacy_runner_harness.py  test_account.py  test_api_contract.py  test_app_build_context.py  test_app_package.py  test_app_release_sync.py  test_app_sandbox_contract.py  test_app_server_account_limits.py  test_app_startup.py  test_approvals_api.py  test_artifact_workspace.py  test_attachment_workspace.py  test_auth.py  test_auth_coordinator.py  test_auth_coordinator_api.py  test_auth_state.py  test_automations.py  test_browser_artifact_storage.py  test_browser_broker.py  test_browser_contract.py  test_browser_egress.py  test_browser_worker_app.py  test_browser_worker_client.py  test_capabilities.py  test_codex_app_server.py  test_codex_app_server_contract.py  test_codex_auth.py  test_codex_process.py  test_codex_release_lock.py  test_diagnostics.py  test_durable_outbox.py  test_event_integration.py  test_event_store.py  test_events_api.py  test_feature_capabilities.py  test_generated_images.py  test_home_assistant_security.py  test_home_assistant_workspaces.py  test_http_limits.py  test_mcp_manager.py  (+22 more)
bridge_service/tests/fakes/: fake_app_server.py
(+159 files in other folders)
