[project]
name = "codex-bridge-service"
version = "0.5.4"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.1",
  "jsonschema>=4.23.0,<5",
  "python-multipart>=0.0.9",
]

[project.scripts]
codex-bridge-service = "codex_bridge_service.__main__:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "PyYAML>=6.0.3,<7",
  "types-jsonschema>=4.26.0.20260518",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
codex_bridge_service = [
  "codex_app_server_contract.json",
  "codex_app_server_protocol.schema.json",
  "codex_app_server_protocol.v2.schema.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
