[project]
name = "codex-bridge-service"
version = "0.7.3"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.139.0",
  "uvicorn>=0.51.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "httpx>=0.28.1",
  "jsonschema>=4.26.0,<5",
  "python-multipart>=0.0.32",
  "python-dateutil>=2.9.0.post0,<3",
]

[project.scripts]
codex-bridge-service = "codex_bridge_service.__main__:main"

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "PyYAML>=6.0.3,<7",
  "types-jsonschema>=4.26.0.20260518",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
codex_bridge_service = [
  "codex_app_server_contract.json",
  "codex_app_server_protocol.schema.json",
  "codex_app_server_protocol.v2.schema.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
